Update: fix layout issue and add new scroll bar

--- a/css_styles/styles.css
+++ b/css_styles/styles.css
@@ -277,10 +277,6 @@ html {
     max-inline-size: fit-content;
 }
 
-.skills-data .mysql {
-    margin-left: 30px;
-}
-
 /* ANIMATION SKILLS */
 
 .skills-data:hover i, .skills-data:hover img {
@@ -563,4 +559,22 @@ footer a {
         width: 100%;
         margin-bottom: 15px;
     }
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    background: rgb(0, 0, 0);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: linear-gradient(90deg, #c7c7c7, #c7c7c7);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(90deg, #979797, #979797);
 }
